--- a/Subverse.css
+++ b/Subverse.css
@@ -61,7 +61,7 @@
             #sr-header-area:hover #sr-bar li a { color: #D0D0D0; }
 
         #header-img {
-            background: url( https://i.imgur.com/Yc8q9AO.png );
+            background: url( http://i.imgur.com/ZRfBXwG.png );
             padding-left: 112px;
         }
 
