--- a/Subverse.css
+++ b/Subverse.css
@@ -18,8 +18,7 @@
 /* ! Header
 -------------------------------------------------------------------------------- */
 #header {
-  background: url(https://i.imgur.com/DsOVEA7.gifv) center no-repeat;
-  background-color: #0033CC;
+  background-color: #3F423E;
   background-size: 1820px 100%, 256px 256px, 256px 256px, 256px 256px, 256px 256px, 256px 256px, 256px 256px, 256px 256px, 256px 256px;
     height: 225px;
     width: 100%
