--- a/Subverse.css
+++ b/Subverse.css
@@ -18,6 +18,7 @@
 /* ! Header
 -------------------------------------------------------------------------------- */
 #header {
+  background: url(https://reallifeanime.files.wordpress.com/2014/06/monogatari-girls.png);
   background-color: #3F423E;
   background-size: 1820px 100%, 256px 256px, 256px 256px, 256px 256px, 256px 256px, 256px 256px, 256px 256px, 256px 256px, 256px 256px;
     height: 225px;
