--- a/Subverse.css
+++ b/Subverse.css
@@ -62,6 +62,8 @@
 
         #header-img {
             background: url( http://i.imgur.com/ZRfBXwG.png );
+            height: 125;
+            width: 148;
             padding-left: 112px;
         }
 
