--- a/Subverse.css
+++ b/Subverse.css
@@ -18,7 +18,7 @@
 /* ! Header
 -------------------------------------------------------------------------------- */
 #header {
-  background: url(https://reallifeanime.files.wordpress.com/2014/06/monogatari-girls.png);
+  background: url(http://i.imgur.com/kXtB8Kz.jpg);
   background-color: #3F423E;
   background-size: 1820px 100%, 256px 256px, 256px 256px, 256px 256px, 256px 256px, 256px 256px, 256px 256px, 256px 256px, 256px 256px;
     height: 225px;
