--- a/Subverse.css
+++ b/Subverse.css
@@ -18,7 +18,6 @@
 /* ! Header
 -------------------------------------------------------------------------------- */
 #header {
-  background: url(http://i.imgur.com/rh78Eg4.png);
   background-color: #3F423E;
   background-size: 1820px 100%, 256px 256px, 256px 256px, 256px 256px, 256px 256px, 256px 256px, 256px 256px, 256px 256px, 256px 256px;
     height: 225px;
@@ -109,7 +108,7 @@
             margin-bottom: 9px;
         }
             .pagename a {
-                color: #E0E0E0;
+                color: #0099FF;
                 border-style: solid none;
                 border-width: 2px;
                 border-color: transparent;
@@ -117,10 +116,10 @@
                 margin: 0 12px;
             }
             .pagename a:hover {
-                color: #E0E0E0;
+                color: #0099FF;
                 border-style: solid none;
                 border-width: 2px;
-                border-color: #E0E0E0;
+                border-color: #0099FF;
                 text-decoration: none;
             }
 
