--- a/Subverse.css
+++ b/Subverse.css
@@ -18,7 +18,7 @@
 /* ! Header
 -------------------------------------------------------------------------------- */
 #header {
-  background-color: #0033CC;
+  background-color: #151515;
   background-size: 1820px 100%, 256px 256px, 256px 256px, 256px 256px, 256px 256px, 256px 256px, 256px 256px, 256px 256px, 256px 256px;
     height: 225px;
     width: 100%
